# rye-playground

my-project/: pyproject.toml
