[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kei Takahashi", email = "hogehoge" }
]
dependencies = [
    "pycowsay>=0.0.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
